@@ -1,4 +1,4 @@
-SUBDIRS = common libavc1394 librom1394 test
+SUBDIRS = common libavc1394 librom1394 libplug1394 test
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config.h.in \
 	stamp-h.in
 install-exec-hook:
