@@ -1,6 +1,6 @@
 AC_INIT(Makefile.am)
 
-AM_INIT_AUTOMAKE(libavc1394, 0.4.1)
+AM_INIT_AUTOMAKE(libavc1394, 0.5.0)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
@@ -18,8 +18,8 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS(sys/time.h sys/types.h unistd.h string.h netinet/in.h stdio.h)
 
 #set the libtool shared library version numbers
-lt_major=1
-lt_revision=1
+lt_major=2
+lt_revision=0
 lt_age=1
 
 AC_SUBST(lt_major)
@@ -33,5 +33,12 @@ LTLIBOBJS=`echo X"$LIBOBJS"|\
            [$Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*$,.lo,"]`
 AC_SUBST(LTLIBOBJS)
 
-AC_OUTPUT(Makefile common/Makefile libavc1394/Makefile librom1394/Makefile test/Makefile)
+AC_OUTPUT([
+Makefile 
+common/Makefile 
+libavc1394/Makefile 
+librom1394/Makefile 
+libplug1394/Makefile 
+test/Makefile
+])
 
