@@ -3,10 +3,13 @@ EXTRA_DIST = dvcont.1
 bin_PROGRAMS = dvcont
 man_MANS = dvcont.1
 
-noinst_PROGRAMS = romtest
+noinst_PROGRAMS = romtest plugctl
 
 dvcont_SOURCES = dvcont.c
 dvcont_LDADD = ../librom1394/librom1394.la ../libavc1394/libavc1394.la -lraw1394
 
 romtest_SOURCES = romtest.c
 romtest_LDADD = ../librom1394/librom1394.la -lraw1394
+
+plugctl_SOURCES = plugctl.c
+plugctl_LDADD = ../libplug1394/libplug1394.la -lraw1394
