@@ -1,3 +1,8 @@
+2002-10-22  Dan Dennedy
+	* added libplug1394/*
+	* added test/plugctl.c
+	* README: updated with librom1394 and libplug1394 info.
+
 2002-10-01  Dan Dennedy <dan@dennedy.org>
 	* common/raw1394util.c: convert from usleep to nanosleep
 	
